--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leads Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
 </head>
 <body>
-    <input type="text" id="input-el">
+    <label for="">Enter URL</label>
+    <input type="text" placeholder="https://example.com" id="input-el">
     <div class="btn-container">
     <button id="input-btn">SAVE</button>
-    <button id="save-tab-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
     </div>
     <ul id="ul-el"></ul>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
