--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
 </head>
-<body>
+<body id="body">
     <label for="">Enter URL</label>
     <input type="text" placeholder="https://example.com" id="input-el">
     <div class="btn-container">
@@ -18,6 +18,15 @@
     <button id="delete-btn">DELETE ALL</button>
     </div>
     <ul id="ul-el"></ul>
+
+    <div id="confirmDelete">
+        <p>do you really want to delete all</p>
+        <div class="btn-holder">
+            <button id="yes-btn">yes</button>
+        <button id="no-btn">no</button>
+        </div>
+
+    </div>
 
     <script type="module" src="script.js"></script>
 </body>
